--- a/wiki/fr/IfcOpenShell.html
+++ b/wiki/fr/IfcOpenShell.html
@@ -2,7 +2,7 @@
 <li><a href="../de/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--complete" title="IfcOpenShell (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../IfcOpenShell.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="IfcOpenShell (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--med" title="IfcOpenShell (41% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--low" title="IfcOpenShell (4% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--low" title="IfcOpenShell (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--low" title="&#1054;&#1090;&#1082;&#1088;&#1099;&#1090;&#1072;&#1103; &#1086;&#1073;&#1086;&#1083;&#1086;&#1095;&#1082;&#1072; IFC (IfcOpenShell) (3% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -20,10 +20,8 @@
 </p><p><span id="From_IfcOpenShell"></span>
 </p>
 <h3><span id=".C3.80_partir_d.27IfcOpenShell"></span><span class="mw-headline" id="&Agrave;_partir_d'IfcOpenShell">&Agrave; partir d'IfcOpenShell</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>IfcOpenShell install page: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
+<p>Page d'installation d'IfcOpenShell&nbsp;: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
 </p>
-</div>
 <h3><span class="mw-headline" id="Pip">Pip</span></h3>
 <p>La mani&egrave;re la plus simple d'installer IfcOpenShell est d'utiliser <a rel="nofollow" class="external text" href="https://pypi.org/project/pip/">pip</a>. Une fois que pip est install&eacute; sur votre syst&egrave;me, vous pouvez <a rel="nofollow" class="external text" href="https://datatofish.com/install-package-python-using-pip/">installer</a> IfcOpenShell facilement &agrave; partir d'une fen&ecirc;tre de terminal&nbsp;:
 </p>
@@ -390,34 +388,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112215000
+Cached time: 20260112215021
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.188 seconds
-Preprocessor visited node count: 1361/1000000
+CPU time usage: 0.120 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 1360/1000000
 Post&#8208;expand include size: 40613/2097152 bytes
 Template argument size: 19470/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 38/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 31726/5000000 bytes
+Unstrip post&#8208;expand size: 31730/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.043      1 -total
- 26.91%   12.928     38 Template:Code
- 19.91%    9.566      1 Template:BIM_Tools_navi/fr
- 19.25%    9.247      3 Template:Navigation_menu_2
- 14.12%    6.785      1 Template:FEM_Tools_navi/fr
-  9.94%    4.776     57 Template:Incode
-  6.04%    2.900      1 Template:Userdocnavi/fr
-  5.33%    2.560      1 Template:Emphasis
-  3.78%    1.815      1 Template:TOCright
+100.00%   29.634      1 -total
+ 26.76%    7.931     38 Template:Code
+ 23.95%    7.096      3 Template:Navigation_menu_2
+ 23.22%    6.882      1 Template:BIM_Tools_navi/fr
+ 11.68%    3.461      1 Template:FEM_Tools_navi/fr
+  8.01%    2.375     57 Template:Incode
+  7.80%    2.312      1 Template:Userdocnavi/fr
+  4.28%    1.268      1 Template:TOCright
+  2.94%    0.871      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:185717-0!canonical and timestamp 20260112215000 and revision id 1737763. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:185717-0!canonical and timestamp 20260112215021 and revision id 1737765. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
