--- a/wiki/fr/Macro_FCCircularText.html
+++ b/wiki/fr/Macro_FCCircularText.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: FCCircularText (98% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -428,10 +428,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Param.C3.A8tres_disponibles"></span><span class="mw-headline" id="Param&egrave;tres_disponibles">Param&egrave;tres disponibles</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Certains param&egrave;tres sont disponibles dans les param&egrave;tres de FreeCAD voir: <b>Menu &rarr; Outils &rarr; Modifier les param&egrave;tres...</b>
+<p>Certains param&egrave;tres sont disponibles dans les param&egrave;tres de FreeCAD voir: <b>Menu &rarr; Outils &rarr; &Eacute;diter des param&egrave;tres</b>
 </p>
-</div>
 <ul><li>Param&egrave;tre utilisateur: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
 <ul><li><code>false</code> le mode texte normal (et noir) d&eacute;sactive switchFontComBox</li>
@@ -467,9 +465,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </p><p>- sur le forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=7384&amp;p=87642#p87642">Extrude from curved surface of cylinder</a>
 </p><p><span id="Examples"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Exemple">Exemple</span></h2>
-</div>
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
@@ -947,35 +943,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213518
+Cached time: 20260112215211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.402 seconds
-Real time usage: 0.945 seconds
-Preprocessor visited node count: 1633/1000000
-Post&#8208;expand include size: 42137/2097152 bytes
-Template argument size: 13338/2097152 bytes
+CPU time usage: 0.383 seconds
+Real time usage: 0.518 seconds
+Preprocessor visited node count: 1631/1000000
+Post&#8208;expand include size: 42133/2097152 bytes
+Template argument size: 13334/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 68338/5000000 bytes
+Unstrip post&#8208;expand size: 68343/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  377.261      1 -total
-  2.76%   10.399      1 Template:Draft_Tools_navi/fr
-  1.55%    5.857      1 Template:Macro/fr
-  1.50%    5.657     10 Template:Code
-  1.38%    5.218      2 Template:Navigation_menu_2
-  1.21%    4.561      5 Template:KEY
-  1.03%    3.902      1 Template:Userdocnavi/fr
-  0.94%    3.537      1 Template:MenuCommand
-  0.88%    3.338      1 Template:Codeextralink
-  0.87%    3.284      1 Template:Emphasis
+100.00%  334.049      1 -total
+  3.38%   11.299      1 Template:Draft_Tools_navi/fr
+  2.61%    8.706     10 Template:Code
+  2.53%    8.458      6 Template:SpinBox
+  2.38%    7.951      1 Template:Emphasis
+  2.19%    7.322      1 Template:Userdocnavi/fr
+  1.88%    6.278      3 Template:ColoredText
+  1.35%    4.517      2 Template:Navigation_menu_2
+  1.08%    3.616      7 Template:RadioButton
+  0.97%    3.253     14 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260111213517 and revision id 1736507. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260112215210 and revision id 1737769. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
