--- a/wiki/fr/Macro_FCCircularText.html
+++ b/wiki/fr/Macro_FCCircularText.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (93% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -552,9 +552,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </ul>
 </center>
 <p><br>
-</p>
-<div class="mw-translate-fuzzy">
-<p><br>
+</p><p><br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -563,8 +561,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 			<div class="gallerytext">Anneau avec courbe interne et soustraction.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Pivot character 0&deg;, 90&deg;, ...."><img alt="Pivot character 0&deg;, 90&deg;, ...." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Pivot character 0&deg;, 90&deg;, ....</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Pivot character 0&deg;, 90&deg;, etc."><img alt="Pivot character 0&deg;, 90&deg;, etc." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Pivot character 0&deg;, 90&deg;, etc.</div>
 		</li>
 </ul>
 </center>
@@ -579,9 +577,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 </ul>
 </center>
 <p><br>
-</p>
-</div>
-<p><span id="Example_onto_Ellipse"></span>
+</p><p><span id="Example_onto_Ellipse"></span>
 </p>
 <h2><span class="mw-headline" id="Exemple_sur_une_ellipse">Exemple sur une ellipse</span></h2>
 <center>
@@ -943,35 +939,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112215211
+Cached time: 20260112215233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.383 seconds
-Real time usage: 0.518 seconds
-Preprocessor visited node count: 1631/1000000
+CPU time usage: 0.333 seconds
+Real time usage: 0.382 seconds
+Preprocessor visited node count: 1630/1000000
 Post&#8208;expand include size: 42133/2097152 bytes
 Template argument size: 13334/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 68343/5000000 bytes
+Unstrip post&#8208;expand size: 68347/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  334.049      1 -total
-  3.38%   11.299      1 Template:Draft_Tools_navi/fr
-  2.61%    8.706     10 Template:Code
-  2.53%    8.458      6 Template:SpinBox
-  2.38%    7.951      1 Template:Emphasis
-  2.19%    7.322      1 Template:Userdocnavi/fr
-  1.88%    6.278      3 Template:ColoredText
-  1.35%    4.517      2 Template:Navigation_menu_2
-  1.08%    3.616      7 Template:RadioButton
-  0.97%    3.253     14 Template:Incode
+100.00%  220.162      1 -total
+  2.87%    6.311      1 Template:Draft_Tools_navi/fr
+  1.77%    3.904      2 Template:Navigation_menu_2
+  1.55%    3.410     10 Template:Code
+  1.52%    3.337      3 Template:ColoredText
+  1.42%    3.135      1 Template:Userdocnavi/fr
+  1.39%    3.070      6 Template:SpinBox
+  1.16%    2.547      7 Template:RadioButton
+  1.05%    2.309      1 Template:Macro/fr
+  0.95%    2.088     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260112215210 and revision id 1737769. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260112215232 and revision id 1737771. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
