--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -1,5 +1,6 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Multi Export</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+Multi+Export&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
+<li><a href="fr/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Multi Export (6% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -11,7 +12,7 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.5.0-beta<br>Last modified: 2026-01-05<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.1<br>Last modified: 2026-01-12<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
@@ -35,13 +36,13 @@ Macro Multi Export
 <th class="ctOdd">Macro Version
 </th></tr>
 <tr>
-<td class="ctEven macro-version">0.5.0-beta
+<td class="ctEven macro-version">0.6.1
 </td></tr>
 <tr>
 <th class="ctOdd">Date last modified
 </th></tr>
 <tr>
-<td class="ctEven macro-date">2026-01-05
+<td class="ctEven macro-date">2026-01-12
 </td></tr>
 <tr>
 <th class="ctOdd">FreeCAD Version(s)
@@ -82,82 +83,73 @@ Macro Multi Export
 <li>AMF - Additive Manufacturing Format (XML-based 3D printing)</li></ul>
 <p><b>Features:</b>
 </p>
-<ul><li>Export to multiple formats in a single operation.</li>
-<li>User-friendly dialog for format selection.</li>
-<li>Configurable output directory and base filename.</li>
-<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports.</li>
-<li>Preview of files to be created.</li>
-<li>Quick select buttons: "Select All", "Select None", "Reset Defaults".</li>
-<li>Default formats: STL, STEP, and 3MF are pre-selected.</li></ul>
+<ul><li>Export to multiple formats in a single operation</li>
+<li>User-friendly dialog for format selection</li>
+<li>Configurable output directory and base filename</li>
+<li>Mesh tolerance settings for STL/OBJ/PLY/3MF/AMF exports</li>
+<li>Preview of files to be created</li>
+<li>Quick select buttons: "Select All", "Select None", "Reset Defaults"</li>
+<li>Default formats: STL, STEP, and 3MF are pre-selected</li></ul>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>Select one or more objects in the 3D view that you want to export.</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b>.</li>
+<ol><li>Select one or more objects in the 3D view that you want to export</li>
+<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b></li>
 <li>In the dialog:
-<ul><li>Review the selected objects in the "Objects to Export" section.</li>
-<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default).</li>
-<li>Choose an output directory using the "Browse..." button.</li>
-<li>Enter a base filename (the format extension will be appended automatically).</li>
-<li>Optionally adjust mesh tolerance settings for mesh-based formats.</li></ul></li>
-<li>Click "Export" to create the files.</li></ol>
+<ul><li>Review the selected objects in the "Objects to Export" section</li>
+<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default)</li>
+<li>Choose an output directory using the "Browse..." button</li>
+<li>Enter a base filename (the format extension will be appended automatically)</li>
+<li>Optionally adjust mesh tolerance settings for mesh-based formats</li></ul></li>
+<li>Click "Export" to create the files</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-<ul><li>FreeCAD 0.21 or later.</li>
-<li>Objects with solid shapes (Part or PartDesign bodies).</li></ul>
+<ul><li>FreeCAD 0.21 or later</li>
+<li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
+<ol><li>Download the macro file: <a href="index.php?title=Special;Upload&amp;wpDestFile=MultiExport.FCMacro.html" class="new" title="MultiExport.FCMacro">MultiExport.FCMacro</a></li>
 <li>Copy the file to your FreeCAD macro directory:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
+<li>Optionally, download the toolbar icon and place it in the same directory</li></ol>
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository (freecad-robust-mcp-and-more)</a></li></ul>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p><p><b>Macro_Multi_Export.FCMacro</b>
-</p>
-<div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
-<div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
-<p><span typeof="mw:File"><a href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
-</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a></span>
-</p>
-</div>
-</div>
-<p><br>
+</p><p><br>
+<b>Macro_Multi_Export.FCMacro</b>
+</p><p>- <a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro</a>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
-<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats.</li></ul>
-<p><br>
-</p>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker</li>
+<li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function</li>
+<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260112191219
+Cached time: 20260113055405
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 143/1000000
-Post&#8208;expand include size: 3192/2097152 bytes
-Template argument size: 1112/2097152 bytes
+CPU time usage: 0.102 seconds
+Real time usage: 0.258 seconds
+Preprocessor visited node count: 135/1000000
+Post&#8208;expand include size: 2532/2097152 bytes
+Template argument size: 830/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 520/5000000 bytes
+Unstrip post&#8208;expand size: 682/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.589      1 -total
- 45.89%    2.565      1 Template:Macro
- 26.23%    1.466      1 Template:CodeDownload
- 21.65%    1.210      3 Template:FileName
+100.00%    4.687      1 -total
+ 70.32%    3.296      1 Template:Macro
+ 24.48%    1.147      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112191219 and revision id 1737661. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260113055410 and revision id 1737793. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
