--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -16,7 +16,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>FreeCAD <a href="../Interface.html" title="Interface">interface</a> &#1077; &#1073;&#1072;&#1079;&#1080;&#1088;&#1072;&#1085; &#1085;&#1072; Qt, &#1076;&#1086;&#1073;&#1088;&#1077; &#1087;&#1086;&#1079;&#1085;&#1072;&#1090; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1077;&#1085; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (GUI) &#1085;&#1072;&#1073;&#1086;&#1088; &#1086;&#1090; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1086;&#1089;&#1086;&#1073;&#1077;&#1085;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085; &#1074; Linux, &#1085;&#1086; &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1077;&#1085; &#1074; Windows &#1080; MacOS.
+<p><a class="mw-selflink selflink">&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090;</a> &#1085;&#1072; FreeCAD &#1077; &#1073;&#1072;&#1079;&#1080;&#1088;&#1072;&#1085; &#1085;&#1072; Qt, &#1076;&#1086;&#1073;&#1088;&#1077; &#1087;&#1086;&#1079;&#1085;&#1072;&#1090; &#1085;&#1072;&#1073;&#1086;&#1088; &#1086;&#1090; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1077;&#1085; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (GUI), &#1086;&#1089;&#1086;&#1073;&#1077;&#1085;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085; &#1074; Linux, &#1085;&#1086; &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1077;&#1085; &#1074; Windows &#1080; MacOS.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standard interface in v0.19.</p>
@@ -122,12 +122,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113072942
+Cached time: 20260113073159
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.063 seconds
-Real time usage: 0.090 seconds
+Real time usage: 0.115 seconds
 Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -138,18 +138,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.584      1 -total
- 29.78%    4.641      1 Template:Userdocnavi/bg
- 24.03%    3.745      1 Template:Interface_navi/bg
- 17.67%    2.753      2 Template:Navigation_menu_2
- 15.56%    2.425      7 Template:StdMenu
-  8.96%    1.396     20 Template:MenuCommand
-  7.82%    1.219      1 Template:Caption
-  7.27%    1.133      1 Template:TOCright
-  6.00%    0.936      1 Template:Version
+100.00%   20.403      1 -total
+ 27.40%    5.591      1 Template:Interface_navi/bg
+ 21.17%    4.320      7 Template:StdMenu
+ 20.31%    4.143      1 Template:Userdocnavi/bg
+ 15.24%    3.109      2 Template:Navigation_menu_2
+ 11.55%    2.356     20 Template:MenuCommand
+  9.11%    1.859      1 Template:Version
+  6.09%    1.242      1 Template:Caption
+  5.86%    1.196      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260113072942 and revision id 1737800. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260113073158 and revision id 1737802. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
